--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,24 @@
-
-.Header{
+.Header {
     display: inline;
-    margin-top: 70px;
-    margin-left: 80px;
 }
 
-button {
-    border: 1px
+.home {
+    color: white;
+    background: #222222;
+    border: 1px solid #222222;
+    border-radius: 15px;
+}
+
+.line {
+    margin-left: 0;
+    width: 1920px;
+    border: 1px solid #222222; 
+}
+
+img {
+    border: 1px solid black;
+    height: 425px;
+    width: 832px;
+    margin-right: 4px;
+    margin-left: auto;
 }
