--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,21 @@
 .Header {
-    display: inline;
+    display: flex;
 }
 
+.btn-wrapper{
+    margin-left: auto;
+    margin-right: 224px;
+}
 .home {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
     color: white;
     background: #222222;
     border: 1px solid #222222;
     border-radius: 15px;
+    margin-left: 78px;
 }
 
 .line {
@@ -16,6 +25,7 @@
 }
 
 img {
+    display: block;
     border: 1px solid black;
     height: 425px;
     width: 832px;
