--- a/code/styles.css
+++ b/code/styles.css
@@ -1,13 +1,11 @@
 .Header {
+    margin-left: 20px;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
     display: flex;
 }
 
-.body {
-    background-color: #222222;
-}
 .btn-wrapper{
     color: #222222;
     display: flex;
@@ -15,7 +13,7 @@
     margin-left: auto;
     margin-right: 24px;
 }
-.btn-right{
+.btn-current{
     padding-right: 18px;
     padding-left: 18px;
     padding-top: 12px;
@@ -24,44 +22,74 @@
     background: #222222;
     border: 1px solid #222222;
     border-radius: 15px;
-    margin-left: 34px;
     margin-bottom: 15px;
 }
 a {
+    color: inherit;
     text-decoration: none;
 }
 .btn-left {
+    padding: 5px;
     color: #222222;
     margin-top: 15px;
-    margin-right: 34px;
+    margin-right: 29px;
+    position: relative;
+}
+
+.btn-left::after {
+    content: " ";
+    background-color: black;
+    position: absolute;
+    height: 2px;
+    width: 0;
+    left: 0;
+    bottom: 0px;
+    transition: all 0.3s ease-in-out;
+}
+.btn-left:hover::after {
+    width: 100%;
 }
 
 .btn-center {
+    padding: 5px;
     color: #222222;
+    margin-right: 29px;
     margin-top: 15px;
+    position: relative;
+}
+.btn-center::after {
+    content: " ";
+    background-color: black;
+    position: absolute;
+    height: 2px;
+    width: 0;
+    left: 0;
+    bottom: 0px;
+    transition: all 0.3s ease-in-out;
+}
+.btn-center:hover::after {
+    width: 100%;
 }
 .line {
     width: auto;
     border: 1px solid #222222; 
 }
 
-.samphoto {
-    display: block;
-    border: 1px solid black;
-    height: 425px;
-    width: 832px;
-    margin-right: 4px;
-    margin-left: auto;
-}
-
-h1 {
-    margin-left: 15px;
-}
-
 .Content {
+    margin-left: 20px;
+    display: flex;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+.samphoto {
+    border: 1px solid black;
+    height: 400px;
+    width: 400px;
+    margin-top: 25px;
+    margin-right: 20px;
+    margin-left: auto;
 }
 
 .social {
