--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ nav {
     z-index: 100;
 }
 
-.btn-wrapper{
+.btn-wrapper {
     color: #222222;
     display: flex;
     align-items: center;
@@ -186,7 +186,8 @@ a {
 .card {
     text-align: center;
     margin: 5px;
-    padding: 5px;
+    /*padding-left: 5px;
+    padding-right: 5px;*/
     border: 1px solid #222222;
     border-radius: 5px;
 }
