--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
     background-color: #f5f5f5;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 h1, h2, h3 {
     color: #2c3e50;
@@ -116,8 +119,10 @@ nav {
 }
 
 a {
+    width: 120px;
     color: #3498db;
     text-decoration: none;
+    
 }
 
 .link {
@@ -126,11 +131,6 @@ a {
 
 .about {
     width: 500px;
-}
-
-.social {
-    display: flex;
-    align-items: center;
 }
 
 .social.hover {
@@ -171,28 +171,38 @@ a {
     background-color: rgba(51, 51, 51, 0.1);
 }
 
-.projects {
+.cards {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
     gap: 30px;
 }
 
 .project-card {
     background-color: #fff;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     overflow: hidden;
+    text-align: center;
+    padding: 5px;
 }
 
 .project-card:hover {
     transform: translateY(-8px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-
-.project-card img {
+.project-link-icon {
+    width: 28px;
+    height: 28px;
+}
+.ss {
     width: 100%;
     height: 180px;
     object-fit: cover;
+}
+
+.status {
+    border: 1px solid;
+    border-radius: 50px;
 }
