--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,9 @@ a {
     gap: 30px;
 }
 
+.project-card strong {
+    color: #2c3e50
+}
 .project-card {
     background-color: #fff;
     border-radius: 12px;
@@ -193,10 +196,14 @@ a {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 .project-link-icon {
+    margin-left: 10px;
+    margin-right: 10px;
     width: 28px;
     height: 28px;
 }
 .ss {
+    border-radius: 5px;
+    border: 1px solid;
     width: 100%;
     height: 180px;
     object-fit: cover;
